Update V8 DEPS (trusted)
Manual changes:
  * Update BUILD.bazel to include new fp16 header.

Rolling build: https://chromium.googlesource.com/chromium/src/build/+log/5f872b8..ab94467

Rolling buildtools: https://chromium.googlesource.com/chromium/src/buildtools/+log/16b1d7d..7b1e40a

Rolling buildtools/linux64: git_revision:cc7c61e105fb56183fd6c5c52bbe3c37ff724a0d..git_revision:c15bfa41e5266dcce4161968ab4eb0387cae7a7a

Rolling buildtools/mac: git_revision:cc7c61e105fb56183fd6c5c52bbe3c37ff724a0d..git_revision:c15bfa41e5266dcce4161968ab4eb0387cae7a7a

Rolling buildtools/win: git_revision:cc7c61e105fb56183fd6c5c52bbe3c37ff724a0d..git_revision:c15bfa41e5266dcce4161968ab4eb0387cae7a7a

Rolling third_party/catapult: https://chromium.googlesource.com/catapult/+log/baad9d0..1988bb4

Rolling third_party/depot_tools: https://chromium.googlesource.com/chromium/tools/depot_tools/+log/b66d188..ae986ef

Rolling third_party/fp16/src: https://chromium.googlesource.com/external/github.com/Maratyszcza/FP16/+log/0a92994..b372061

Rolling third_party/googletest/src: https://chromium.googlesource.com/external/github.com/google/googletest/+log/373af2e..244cec8

Rolling gcs:chromium-browser-clang/Linux_x64/clang: Linux_x64/clang-llvmorg-21-init-16348-gbd809ffb-15.tar.xz,b448a78b42740352a37b458115a9482f213097bbf28f1f839e72cab829bdfa6d,55133120,1753983011666559..Linux_x64/clang-llvmorg-21-init-16348-gbd809ffb-17.tar.xz,a9f5af449672a239366199c17441427c2c4433a120cace9ffd32397e15224c64,55087424,1754486730635359

Rolling gcs:chromium-browser-clang/Linux_x64/clang-tidy: Linux_x64/clang-tidy-llvmorg-21-init-16348-gbd809ffb-15.tar.xz,98da47515c1f996bdf884487afff4cca0bbbd6a23347b5fc9442ba4210ca66a2,13659920,1753983011671003..Linux_x64/clang-tidy-llvmorg-21-init-16348-gbd809ffb-17.tar.xz,c2ce17d666c5124d1b3999e160836b096b22a7c2dbb6f70637be6dceefa4bb86,13688944,1754486730632975

Rolling gcs:chromium-browser-clang/Linux_x64/clangd: Linux_x64/clangd-llvmorg-21-init-16348-gbd809ffb-15.tar.xz,e133b8b139

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3987,6 +3987,7 @@ v8_library(
   hdrs = [
     "third_party/fp16/src/include/fp16/fp16.h",
     "third_party/fp16/src/include/fp16/bitcasts.h",
+    "third_party/fp16/src/include/fp16/macros.h",
   ],
   includes = [
     "third_party/fp16/src/include",
