[ignition] Optimize consecutive assignments to x.prototype
Bug: 429332174
Change-Id: I20bdb1e04daf0f99c6ec4fc9839b89338e7c26e3
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6722290
Reviewed-by: Camillo Bruni <cbruni@chromium.org>
Auto-Submit: Raphael Herouart <rherouart@chromium.org>
Commit-Queue: Raphael Herouart <rherouart@chromium.org>
Reviewed-by: Igor Sheludko <ishell@chromium.org>
Cr-Commit-Position: refs/heads/main@{#101891}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1963,6 +1963,8 @@ filegroup(
         "src/interpreter/interpreter-generator.h",
         "src/interpreter/interpreter-intrinsics.cc",
         "src/interpreter/interpreter-intrinsics.h",
+        "src/interpreter/prototype-assignment-sequence-builder.cc",
+        "src/interpreter/prototype-assignment-sequence-builder.h",
         "src/json/json-parser.cc",
         "src/json/json-parser.h",
         "src/json/json-stringifier.cc",
