--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3948,6 +3948,7 @@ v8_header_set("v8_internal_headers") {
     "src/interpreter/interpreter-generator.h",
     "src/interpreter/interpreter-intrinsics.h",
     "src/interpreter/interpreter.h",
+    "src/interpreter/prototype-assignment-sequence-builder.h",
     "src/json/json-parser.h",
     "src/json/json-stringifier.h",
     "src/libsampler/sampler.h",
@@ -5687,6 +5688,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/interpreter/handler-table-builder.cc",
     "src/interpreter/interpreter-intrinsics.cc",
     "src/interpreter/interpreter.cc",
+    "src/interpreter/prototype-assignment-sequence-builder.cc",
     "src/json/json-parser.cc",
     "src/json/json-stringifier.cc",
     "src/libsampler/sampler.cc",
