--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -373,6 +373,7 @@ v8_source_set("v8_unittests_sources") {
     "heap/slot-set-unittest.cc",
     "heap/spaces-unittest.cc",
     "heap/strong-root-allocator-unittest.cc",
+    "heap/write-barrier-unittest.cc",
     "interpreter/bytecode-array-builder-unittest.cc",
     "interpreter/bytecode-array-iterator-unittest.cc",
     "interpreter/bytecode-array-random-iterator-unittest.cc",
