--- a/BUILD.gn
+++ b/BUILD.gn
@@ -47,6 +47,9 @@ declare_args() {
   # Sets -DVERIFY_HEAP.
   v8_enable_verify_heap = ""
 
+  # Sets -DVERIFY_WRITE_BARRIERS.
+  v8_enable_verify_write_barriers = ""
+
   # Sets -DVERIFY_PREDICTABLE
   v8_enable_verify_predictable = false
 
@@ -505,6 +508,10 @@ if (cppgc_enable_verify_heap == "") {
 if (v8_enable_verify_heap == "") {
   v8_enable_verify_heap = v8_enable_debugging_features
 }
+if (v8_enable_verify_write_barriers == "") {
+  v8_enable_verify_write_barriers =
+      v8_enable_debugging_features && !v8_disable_write_barriers
+}
 if (v8_enable_object_print == "") {
   v8_enable_object_print = v8_enable_debugging_features
 }
@@ -731,6 +738,9 @@ if (v8_enable_webassembly && v8_current_cpu == "arm64") {
 
 assert(!v8_disable_write_barriers || v8_enable_single_generation,
        "Disabling write barriers works only with single generation")
+
+assert(!v8_enable_verify_write_barriers || !v8_disable_write_barriers,
+       "Write barriers need to be enabled for verification")
 
 assert(v8_current_cpu == "arm64" || !v8_control_flow_integrity,
        "Control-flow integrity is only supported on arm64")
@@ -1207,6 +1217,9 @@ config("features") {
   }
   if (v8_enable_verify_heap) {
     defines += [ "VERIFY_HEAP" ]
+  }
+  if (v8_enable_verify_write_barriers) {
+    defines += [ "V8_VERIFY_WRITE_BARRIERS" ]
   }
   if (v8_enable_verify_predictable) {
     defines += [ "VERIFY_PREDICTABLE" ]
