[regexp] Scaffold assembling from bytecode
Introduce RegExpCodeGenerator that will be used to assemble JIT-code
from bytecode and hook everything up behind the new experimental flag
`--regexp-assemble-from-bytecode`.
Right now no bytecode lowering is implemented, we will always bail-out
to full recompilation.

Bug: 437003349
Change-Id: I276872a9fba8c78bec10677085a719a061af6276
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6827426
Reviewed-by: Jakob Linke <jgruber@chromium.org>
Commit-Queue: Patrick Thier <pthier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102084}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2389,6 +2389,8 @@ filegroup(
         "src/regexp/regexp-bytecodes.cc",
         "src/regexp/regexp-bytecodes.h",
         "src/regexp/regexp-bytecodes-inl.h",
+        "src/regexp/regexp-code-generator.cc",
+        "src/regexp/regexp-code-generator.h",
         "src/regexp/regexp-compiler.cc",
         "src/regexp/regexp-compiler.h",
         "src/regexp/regexp-compiler-tonode.cc",
