--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4257,6 +4257,7 @@ v8_header_set("v8_internal_headers") {
     "src/regexp/regexp-bytecode-peephole.h",
     "src/regexp/regexp-bytecodes-inl.h",
     "src/regexp/regexp-bytecodes.h",
+    "src/regexp/regexp-code-generator.h",
     "src/regexp/regexp-compiler.h",
     "src/regexp/regexp-dotprinter.h",
     "src/regexp/regexp-error.h",
@@ -5828,6 +5829,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/regexp/regexp-bytecode-generator.cc",
     "src/regexp/regexp-bytecode-peephole.cc",
     "src/regexp/regexp-bytecodes.cc",
+    "src/regexp/regexp-code-generator.cc",
     "src/regexp/regexp-compiler-tonode.cc",
     "src/regexp/regexp-compiler.cc",
     "src/regexp/regexp-dotprinter.cc",
