[regexp] Introduce RegExpBytecodeIterator
Add a new iterator to iterate over all bytecodes in a BytecodeArray.

Bug: 437003349, 433891213
Change-Id: I13b174ef4ba7f335683dd2334ca3d11f530ac10d
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6879527
Reviewed-by: Jakob Linke <jgruber@chromium.org>
Commit-Queue: Patrick Thier <pthier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102089}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2384,6 +2384,9 @@ filegroup(
         "src/regexp/regexp-bytecode-generator.cc",
         "src/regexp/regexp-bytecode-generator.h",
         "src/regexp/regexp-bytecode-generator-inl.h",
+        "src/regexp/regexp-bytecode-iterator.cc",
+        "src/regexp/regexp-bytecode-iterator.h",
+        "src/regexp/regexp-bytecode-iterator-inl.h",
         "src/regexp/regexp-bytecode-peephole.cc",
         "src/regexp/regexp-bytecode-peephole.h",
         "src/regexp/regexp-bytecodes.cc",
