--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4254,6 +4254,8 @@ v8_header_set("v8_internal_headers") {
     "src/regexp/regexp-ast.h",
     "src/regexp/regexp-bytecode-generator-inl.h",
     "src/regexp/regexp-bytecode-generator.h",
+    "src/regexp/regexp-bytecode-iterator-inl.h",
+    "src/regexp/regexp-bytecode-iterator.h",
     "src/regexp/regexp-bytecode-peephole.h",
     "src/regexp/regexp-bytecodes-inl.h",
     "src/regexp/regexp-bytecodes.h",
@@ -5827,6 +5829,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/regexp/experimental/experimental.cc",
     "src/regexp/regexp-ast.cc",
     "src/regexp/regexp-bytecode-generator.cc",
+    "src/regexp/regexp-bytecode-iterator.cc",
     "src/regexp/regexp-bytecode-peephole.cc",
     "src/regexp/regexp-bytecodes.cc",
     "src/regexp/regexp-code-generator.cc",
