--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -218,6 +218,11 @@ declare_args() {
   v8_enable_pointer_compression_shared_cage = ""
   v8_enable_31bit_smis_on_64bit_arch = false
 
+  # When `v8_enable_pointer_compression_shared_cage` RO space is placed into a
+  # contiguous area at the front of the cage. In case RO allocations fails this
+  # size needs to be adjusted.
+  v8_contiguous_compressed_ro_space_size_mb = 8
+
   # Change code emission and runtime features to be CET shadow-stack compliant
   # (incomplete and experimental).
   v8_enable_cet_shadow_stack = false
