[testing] Generalize bytecode expectation tests for flags
The bytecode expectation generator is changed from having a hardcoded
`elide redundant tdz checks` boolean to a generic `extra flags` string.
This allows any flag to be set for a bytecode expectation test.

The `SaveFlags` RAII helper is moved from `test/unittests` to
`src/flags` to be used by the generator.

Change-Id: Ib88abfbc1be91121c87a17d926adf85b1d61ac50
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6909215
Reviewed-by: Patrick Thier <pthier@chromium.org>
Auto-Submit: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Leszek Swirski <leszeks@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102221}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1671,6 +1671,8 @@ filegroup(
         "src/flags/flags-impl.h",
         "src/flags/flags.cc",
         "src/flags/flags.h",
+        "src/flags/save-flags.h",
+        "src/flags/save-flags.cc",
         "src/handles/global-handles.cc",
         "src/handles/global-handles.h",
         "src/handles/global-handles-inl.h",
