--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3786,6 +3786,7 @@ v8_header_set("v8_internal_headers") {
     "src/extensions/ignition-statistics-extension.h",
     "src/extensions/statistics-extension.h",
     "src/extensions/trigger-failure-extension.h",
+    "src/flags/save-flags.h",
     "src/handles/global-handles-inl.h",
     "src/handles/global-handles.h",
     "src/handles/handles-inl.h",
@@ -5604,6 +5605,7 @@ v8_source_set("v8_base_without_compiler") {
     "src/extensions/statistics-extension.cc",
     "src/extensions/trigger-failure-extension.cc",
     "src/flags/flags.cc",
+    "src/flags/save-flags.cc",
     "src/handles/global-handles.cc",
     "src/handles/handles.cc",
     "src/handles/local-handles.cc",
