--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -379,6 +379,8 @@ v8_source_set("v8_unittests_sources") {
     "interpreter/bytecode-array-random-iterator-unittest.cc",
     "interpreter/bytecode-array-writer-unittest.cc",
     "interpreter/bytecode-decoder-unittest.cc",
+    "interpreter/bytecode-expectations-parser.cc",
+    "interpreter/bytecode-expectations-parser.h",
     "interpreter/bytecode-expectations-printer.cc",
     "interpreter/bytecode-expectations-printer.h",
     "interpreter/bytecode-generator-unittest.cc",
@@ -901,6 +903,8 @@ v8_executable("generate-bytecode-expectations") {
   testonly = true
 
   sources = [
+    "interpreter/bytecode-expectations-parser.cc",
+    "interpreter/bytecode-expectations-parser.h",
     "interpreter/bytecode-expectations-printer.cc",
     "interpreter/bytecode-expectations-printer.h",
     "interpreter/generate-bytecode-expectations.cc",
