[heap] Toggle contiguous RO space via runtime flag
Toggle the congituous RO space reservations via runtime flag.  The
actual feature needs to use a compile-time flag once we have
stabilized the reservation handling.

Bug: 429538831
Change-Id: Ia83d11a04f28a5418f8f68057e92ec5f05045e09
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6918973
Commit-Queue: Michael Lippautz <mlippautz@chromium.org>
Reviewed-by: Dominik Inführ <dinfuehr@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102326}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -577,6 +577,7 @@ v8_config(
     }) + select({
         ":enable_pointer_compression_shared_cage": [
             "V8_COMPRESS_POINTERS_IN_SHARED_CAGE",
+            "V8_CONTIGUOUS_COMPRESSED_RO_SPACE_SIZE_MB=8",
         ],
         ":enable_pointer_compression_multiple_cages": [
             "V8_COMPRESS_POINTERS_IN_MULTIPLE_CAGES",
