--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3531,6 +3531,7 @@ filegroup(
         "src/compiler/turboshaft/select-lowering-reducer.h",
         "src/compiler/turboshaft/sidetable.cc",
         "src/compiler/turboshaft/sidetable.h",
+        "src/compiler/turboshaft/simplified-optimization-reducer.h",
         "src/compiler/turboshaft/simplify-tf-loops.cc",
         "src/compiler/turboshaft/simplify-tf-loops.h",
         "src/compiler/turboshaft/snapshot-table.h",
