[maglev][cleanup] Create a header for known node aspects
This just move code to a different file, no new code.

Drive-by: move KnownMapsMerger to the new file. This will
be reuse in a follow up.

Bug: 424157317
Change-Id: I26af5a5e57b4eda5bc800c4132aabe8d7e7d71dc
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6929889
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Commit-Queue: Darius Mercadier <dmercadier@chromium.org>
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102369}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2929,6 +2929,8 @@ filegroup(
             "src/maglev/maglev-compiler.cc",
             "src/maglev/maglev-concurrent-dispatcher.cc",
             "src/maglev/maglev-graph-builder.cc",
+            "src/maglev/maglev-known-node-aspects.cc",
+            "src/maglev/maglev-known-node-aspects.h",
             "src/maglev/maglev-graph-labeller.cc",
             "src/maglev/maglev-graph-optimizer.cc",
             "src/maglev/maglev-graph-printer.cc",
@@ -3698,6 +3700,8 @@ filegroup(
             "src/maglev/maglev-compilation-info.h",
             "src/maglev/maglev-compilation-unit.cc",
             "src/maglev/maglev-compilation-unit.h",
+            "src/maglev/maglev-known-node-aspects.cc",
+            "src/maglev/maglev-known-node-aspects.h",
             "src/maglev/maglev-graph-builder.cc",
             "src/maglev/maglev-graph-builder.h",
             "src/maglev/maglev-graph-optimizer.cc",
