[turbolev] Recompute KNA
Recomputes the Known Node Aspects (KNA) for the entire graph.

KNA tracks information about nodes that can be used for
optimizations, such as eliminating redundant checks or loads.
Finding node alternatives, etc...

Currently, this is just an skeleton. We still need to register
things in the KNA, for instance save the maps for an object
after a CheckMaps. (follow up work).

This is done in a different processor and can be combine with
MaglevOptimizer to improve its efficiency.

Bug: 424157317
Change-Id: I5b568ee670fff950ff1e0806399b25bceae78cc8
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6929962
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102381}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2910,6 +2910,7 @@ filegroup(
             "src/maglev/maglev-interpreter-frame-state.h",
             "src/maglev/maglev-ir-inl.h",
             "src/maglev/maglev-ir.h",
+            "src/maglev/maglev-kna-processor.h",
             "src/maglev/maglev-phi-representation-selector.h",
             "src/maglev/maglev-truncation.h",
             "src/maglev/maglev-pipeline-statistics.h",
@@ -3721,6 +3722,7 @@ filegroup(
             "src/maglev/maglev-ir.cc",
             "src/maglev/maglev-ir.h",
             "src/maglev/maglev-ir-inl.h",
+            "src/maglev/maglev-kna-processor.h",
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-register-frame-array.h",
