--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3377,6 +3377,22 @@ v8_header_set("v8_flags") {
   ]
 }
 
+if (v8_enable_temporal_support) {
+  # In cases where we aren't using ICU4C (e.g. v8_enable_i18n_support=false),
+  # we "bake" in a zoneinfo64.res binary for Temporal
+  action("make_temporal_zoneinfo_cpp") {
+    script = "tools/include-file-as-bytes.py"
+    inputs = [ "third_party/icu/tzres/zoneinfo64.res" ]
+    outputs =
+        [ "$target_gen_dir/src/builtins/builtins-temporal-zoneinfo64-data.cc" ]
+    args = [
+      rebase_path(inputs[0], root_build_dir),
+      rebase_path(outputs[0], root_build_dir),
+      "zoneinfo64_static_data",
+    ]
+  }
+}
+
 v8_header_set("v8_internal_headers") {
   configs = [ ":internal_config" ]
 
@@ -4420,6 +4436,7 @@ v8_header_set("v8_internal_headers") {
     sources += [
       "src/objects/js-temporal-objects-inl.h",
       "src/objects/js-temporal-objects.h",
+      "src/objects/js-temporal-zoneinfo64.h",
     ]
   }
 
@@ -5957,6 +5974,7 @@ v8_source_set("v8_base_without_compiler") {
     sources += [
       "src/builtins/builtins-temporal.cc",
       "src/objects/js-temporal-objects.cc",
+      "src/objects/js-temporal-zoneinfo64.cc",
     ]
   }
 
@@ -6467,6 +6485,14 @@ v8_source_set("v8_base_without_compiler") {
       "$v8_zlib_path",
       "$v8_zlib_path/google:compression_utils_portable",
     ]
+  }
+
+  # In i18n mode, we can use ICU4C to load ICU4C's builtin zoneinfo64.res data
+  # In non-i18n mode, we need to copy that into the binary
+  if (v8_enable_temporal_support && !v8_enable_i18n_support) {
+    sources +=
+        [ "$target_gen_dir/src/builtins/builtins-temporal-zoneinfo64-data.cc" ]
+    deps += [ ":make_temporal_zoneinfo_cpp" ]
   }
 
   if (v8_postmortem_support) {
