[temporal] Use gn path for //third_party/icu
The path is otherwise relative; and relative paths don't work for
third_party in a chromium build since they are at the root.

The V8 roll will fail without this (see
https://chromium-review.googlesource.com/c/chromium/src/+/6941782 )

Bug: 401065166
Change-Id: I6a6a6964cd464e75500ed94093f1f0192e97e98b
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6937663
Commit-Queue: Manish Goregaokar <manishearth@google.com>
Auto-Submit: Manish Goregaokar <manishearth@google.com>
Reviewed-by: Deepti Gandluri <gdeepti@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102430}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -3382,7 +3382,7 @@ if (v8_enable_temporal_support) {
   # we "bake" in a zoneinfo64.res binary for Temporal
   action("make_temporal_zoneinfo_cpp") {
     script = "tools/include-file-as-bytes.py"
-    inputs = [ "third_party/icu/tzres/zoneinfo64.res" ]
+    inputs = [  get_label_info("//third_party/icu/", "dir") + "/tzres/zoneinfo64.res" ]
     outputs =
         [ "$target_gen_dir/src/builtins/builtins-temporal-zoneinfo64-data.cc" ]
     args = [
