--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -436,6 +436,7 @@ v8_source_set("v8_unittests_sources") {
     "objects/managed-unittest.cc",
     "objects/modules-unittest.cc",
     "objects/object-unittest.cc",
+    "objects/property-details-unittest.cc",
     "objects/representation-unittest.cc",
     "objects/roots-unittest.cc",
     "objects/swiss-hash-table-helpers-unittest.cc",
