Disable partial allocator on multi-sandbox.
Partial allocator must be globally initialized once for one sandbox
but it isn't supported for multi-sandbox configuration.

Bug: 392817524
Change-Id: Ice45197fe13f229a7090e0c1d6b22a70b4a13907
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6948292
Commit-Queue: Dmitry Bezhetskov <dima00782@gmail.com>
Reviewed-by: Igor Sheludko <ishell@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102515}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -479,10 +479,7 @@ declare_args() {
   # closely mimic in-browser behavior.
   #
   # Currently used in d8.
-  v8_enable_partition_alloc =
-      !build_with_v8_embedder &&
-      !(defined(build_with_node) && build_with_node) &&
-      (v8_target_cpu != "ppc64" && v8_target_cpu != "s390x")
+  v8_enable_partition_alloc = ""
 
   # V8 uses Chrome's blink-gc clang plugin for checking V8's internal cppgc
   # usages. The plugin is not exhaustive but covers most common known pitfalls.
@@ -616,6 +613,17 @@ if (v8_enable_maglev == "") {
 }
 assert(v8_enable_turbofan || !v8_enable_maglev,
        "Maglev is not available when Turbofan is disabled.")
+
+if (v8_enable_partition_alloc == "") {
+  v8_enable_partition_alloc =
+      !build_with_v8_embedder &&
+      !(defined(build_with_node) && build_with_node) &&
+      (v8_target_cpu != "ppc64" && v8_target_cpu != "s390x") &&
+      v8_enable_pointer_compression_shared_cage
+}
+
+assert(!v8_enable_partition_alloc || v8_enable_pointer_compression_shared_cage,
+       "partition_alloc is not available for multi-cage mode.")
 
 is_wasm_interpreter_mode_enabled =
     !v8_enable_sparkplug && !v8_enable_maglev && !v8_enable_turbofan &&
