[heap] Merge build and runtime-flag for WB verification
Now that the overhead of verification was reduced, we can try
enabling the skipped write barrier verification in debug builds
by default.

This CL also merges the build-time and runtime-flag for this feature
to reduce complexity.

Bug: 437096305
Change-Id: I21d0951c1282cdb3658c7bb06becfbd9f8c7af2f
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6950645
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Commit-Queue: Dominik Inführ <dinfuehr@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102545}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -504,7 +504,8 @@ if (v8_enable_verify_heap == "") {
 }
 if (v8_enable_verify_write_barriers == "") {
   v8_enable_verify_write_barriers =
-      v8_enable_debugging_features && !v8_disable_write_barriers
+      (v8_enable_debugging_features || v8_dcheck_always_on) &&
+      !v8_disable_write_barriers
 }
 if (v8_enable_object_print == "") {
   v8_enable_object_print = v8_enable_debugging_features
