--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2820,6 +2820,8 @@ filegroup(
             "src/codegen/riscv/extension-riscv-v.h",
             "src/codegen/riscv/extension-riscv-zicsr.h",
             "src/codegen/riscv/extension-riscv-zifencei.h",
+            "src/codegen/riscv/extension-riscv-zimop.cc",
+            "src/codegen/riscv/extension-riscv-zimop.h",
             "src/codegen/riscv/interface-descriptors-riscv-inl.h",
             "src/codegen/riscv/macro-assembler-riscv.h",
             "src/codegen/riscv/register-riscv.h",
