--- a/test/BUILD.gn
+++ b/test/BUILD.gn
@@ -30,7 +30,11 @@ group("gn_all") {
       "wasm-js:v8_wasm_js",
       "wasm-spec-tests:v8_wasm_spec_tests",
     ]
-    deps += [ "wasm-api-tests:wasm_api_tests" ]
+    # TODO(https://crbug.com/445649941): Temporarily skipped on windows with
+    # arm64.
+    if (!is_win || v8_target_cpu != "arm64") {
+      deps += [ "wasm-api-tests:wasm_api_tests" ]
+    }
   }
 
   if (v8_fuzzilli) {
@@ -107,10 +111,14 @@ group("v8_bot_default") {
 
   if (v8_enable_webassembly) {
     data_deps += [
-      "wasm-api-tests:wasm_api_tests",
       "wasm-js:v8_wasm_js",
       "wasm-spec-tests:v8_wasm_spec_tests",
     ]
+    # TODO(https://crbug.com/445649941): Temporarily skipped on windows with
+    # arm64.
+    if (!is_win || v8_target_cpu != "arm64") {
+      data_deps += [ "wasm-api-tests:wasm_api_tests" ]
+    }
   }
 }
 
@@ -132,10 +140,14 @@ group("v8_default") {
 
   if (v8_enable_webassembly) {
     data_deps += [
-      "wasm-api-tests:wasm_api_tests",
       "wasm-js:v8_wasm_js",
       "wasm-spec-tests:v8_wasm_spec_tests",
     ]
+    # TODO(https://crbug.com/445649941): Temporarily skipped on windows with
+    # arm64.
+    if (!is_win || v8_target_cpu != "arm64") {
+      data_deps += [ "wasm-api-tests:wasm_api_tests" ]
+    }
   }
 }
 
