build: Move sanitizer defines into GN
To accommodate Chromium defaulting `-fsanitize=array-bounds` in
`//build/config`, this change moves V8's sanitizer `#define`s out of
`base/macros.h` straight into a global-ish build config provided by
the V8 build templates. This strongly ties the sanitizer gating macros
to GN's `is_asan` etc.

Bug: 430178746
Change-Id: I4c1d96827db70d3309c093b3473998237ceeb1a0
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6966641
Reviewed-by: Michael Achenbach <machenbach@chromium.org>
Reviewed-by: Michael Lippautz <mlippautz@chromium.org>
Commit-Queue: Kalvin Lee <kdlee@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102621}

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -1805,6 +1805,32 @@ config("always_turbofanimize") {
   }
 }
 
+# Sanitizer defines. V8 will inherit a default `-fsanitize=array-bounds`
+# from Chromium's `//build/config/`, which prevents clean usage of
+# `__has_feature(undefined_behavior_sanitizer)` in the short term,
+# until something like `--lie-about-ubsan-enablement=array-bounds`
+# can be implemented.
+#
+# This config provides a clear signal of "are we sanitizing" tied to
+# GN configuration.
+#
+# See also: https://crbug.com/386992829
+config("sanitizer_defines") {
+  defines = []
+  if (is_asan) {
+    defines += [ "V8_USE_ADDRESS_SANITIZER" ]
+  }
+  if (is_hwasan) {
+    defines += [ "V8_USE_HWADDRESS_SANITIZER" ]
+  }
+  if (is_msan) {
+    defines += [ "V8_USE_MEMORY_SANITIZER" ]
+  }
+  if (is_ubsan) {
+    defines += [ "V8_USE_UNDEFINED_BEHAVIOR_SANITIZER" ]
+  }
+}
+
 ###############################################################################
 # Actions
 #
