--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1462,8 +1462,8 @@ filegroup(
         "src/codegen/compilation-cache.h",
         "src/codegen/compiler.cc",
         "src/codegen/compiler.h",
-        "src/codegen/constant-pool.cc",
         "src/codegen/constant-pool.h",
+        "src/codegen/constant-pool-entry.h",
         "src/codegen/constants-arch.h",
         "src/codegen/cpu-features.h",
         "src/codegen/external-reference.cc",
@@ -2734,6 +2734,8 @@ filegroup(
             "src/codegen/arm64/assembler-arm64.cc",
             "src/codegen/arm64/assembler-arm64.h",
             "src/codegen/arm64/assembler-arm64-inl.h",
+            "src/codegen/arm64/constant-pool-arm64.cc",
+            "src/codegen/arm64/constant-pool-arm64.h",
             "src/codegen/arm64/constants-arm64.h",
             "src/codegen/arm64/cpu-arm64.cc",
             "src/codegen/arm64/decoder-arm64.cc",
@@ -2800,6 +2802,8 @@ filegroup(
             "src/codegen/riscv/base-assembler-riscv.h",
             "src/codegen/riscv/base-constants-riscv.h",
             "src/codegen/riscv/base-riscv-i.h",
+            "src/codegen/riscv/constant-pool-riscv.cc",
+            "src/codegen/riscv/constant-pool-riscv.h",
             "src/codegen/riscv/constant-riscv-a.h",
             "src/codegen/riscv/constant-riscv-b.h",
             "src/codegen/riscv/constant-riscv-c.h",
@@ -2844,6 +2848,8 @@ filegroup(
             "src/codegen/ppc/assembler-ppc.cc",
             "src/codegen/ppc/assembler-ppc.h",
             "src/codegen/ppc/assembler-ppc-inl.h",
+            "src/codegen/ppc/constant-pool-ppc.cc",
+            "src/codegen/ppc/constant-pool-ppc.h",
             "src/codegen/ppc/constants-ppc.cc",
             "src/codegen/ppc/constants-ppc.h",
             "src/codegen/ppc/cpu-ppc.cc",
