--- a/test/unittests/BUILD.gn
+++ b/test/unittests/BUILD.gn
@@ -336,6 +336,7 @@ v8_source_set("v8_unittests_sources") {
     "gay-shortest.cc",
     "gay-shortest.h",
     "heap/allocation-observer-unittest.cc",
+    "heap/code-range-unittest.cc",
     "heap/conservative-stack-visitor-unittest.cc",
     "heap/cppgc-js/embedder-roots-handler-unittest.cc",
     "heap/cppgc-js/traced-reference-unittest.cc",
