--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3674,6 +3674,8 @@ filegroup(
             "src/compiler/turboshaft/wasm-shuffle-reducer.h",
             "src/compiler/turboshaft/wasm-simd-phase.cc",
             "src/compiler/turboshaft/wasm-simd-phase.h",
+            "src/compiler/turboshaft/wasm-type-cast-rtt-optimization-helpers.cc",
+            "src/compiler/turboshaft/wasm-type-cast-rtt-optimization-helpers.h",
             "src/compiler/wasm-address-reassociation.cc",
             "src/compiler/wasm-address-reassociation.h",
             "src/compiler/wasm-call-descriptors.cc",
