[build] Add a switch to force the maximum optimization level
Bug: 448064589
Change-Id: If6eac640b5d1075df8744e9032f76624abcbabe3
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6995178
Reviewed-by: Leszek Swirski <leszeks@chromium.org>
Commit-Queue: Michael Achenbach <machenbach@chromium.org>
Reviewed-by: Matthias Liedtke <mliedtke@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102829}

--- a/gni/v8.gni
+++ b/gni/v8.gni
@@ -160,6 +160,9 @@ declare_args() {
   # Add fuzzilli fuzzer support.
   v8_fuzzilli = false
 
+  # Force optimizing with -O3 for increased inlining.
+  v8_force_optimize_speed = false
+
   # Enable FuzzTest
   v8_enable_fuzztest = !build_with_v8_embedder &&
                        !(defined(build_with_node) && build_with_node) &&
@@ -332,7 +335,7 @@ v8_inspector_js_protocol = v8_path_prefix + "/include/js_protocol.pdl"
 #
 
 # Common configs to remove or add in all v8 targets.
-v8_remove_configs = []
+v8_remove_configs = [ "//build/config/compiler:default_optimization" ]
 v8_add_configs = [
   v8_path_prefix + ":features",
   v8_path_prefix + ":toolchain",
@@ -340,19 +343,18 @@ v8_add_configs = [
   v8_path_prefix + ":sanitizer_defines",
 ]
 
-if (is_debug && !v8_optimized_debug) {
-  v8_remove_configs += [ "//build/config/compiler:default_optimization" ]
+if (v8_force_optimize_speed) {
+  # Switch to force -O3 optimization regardless of platform or sanitizer
+  # usage.
+  v8_add_configs += [ "//build/config/compiler:optimize_speed" ]
+} else if (is_debug && !v8_optimized_debug) {
   v8_add_configs += [ "//build/config/compiler:no_optimize" ]
-} else {
-  v8_remove_configs += [ "//build/config/compiler:default_optimization" ]
-
+} else if (((is_posix && !is_android) || is_win) && !using_sanitizer) {
   # TODO(crbug.com/621335) Rework this so that we don't have the confusion
   # between "optimize_speed" and "optimize_max".
-  if (((is_posix && !is_android) || is_win) && !using_sanitizer) {
-    v8_add_configs += [ "//build/config/compiler:optimize_speed" ]
-  } else {
-    v8_add_configs += [ "//build/config/compiler:optimize_max" ]
-  }
+  v8_add_configs += [ "//build/config/compiler:optimize_speed" ]
+} else {
+  v8_add_configs += [ "//build/config/compiler:optimize_max" ]
 }
 
 if (!is_debug) {
