[turbolev] Simple range value analysis skeleton
Bug: 447172725
Change-Id: I88c52792a741d35f811057d3792cea0ced196ddd
Reviewed-on: https://chromium-review.googlesource.com/c/v8/v8/+/6973485
Reviewed-by: Darius Mercadier <dmercadier@chromium.org>
Commit-Queue: Victor Gomes <victorgomes@chromium.org>
Auto-Submit: Victor Gomes <victorgomes@chromium.org>
Cr-Commit-Position: refs/heads/main@{#102949}

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2923,6 +2923,7 @@ filegroup(
             "src/maglev/maglev-pipeline-statistics.h",
             "src/maglev/maglev-post-hoc-optimizations-processors.h",
             "src/maglev/maglev-pre-regalloc-codegen-processors.h",
+            "src/maglev/maglev-range-analysis.h",
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-regalloc-data.h",
@@ -3734,6 +3735,7 @@ filegroup(
             "src/maglev/maglev-ir.h",
             "src/maglev/maglev-ir-inl.h",
             "src/maglev/maglev-kna-processor.h",
+            "src/maglev/maglev-range-analysis.h",
             "src/maglev/maglev-reducer-inl.h",
             "src/maglev/maglev-reducer.h",
             "src/maglev/maglev-register-frame-array.h",
