--- a/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
+++ b/tools/clusterfuzz/trials/clusterfuzz_trials_config.json
@@ -70,5 +70,6 @@
     {"app_args": "--experimental-wasm-revectorize", "app_name": "d8", "probability": 0.25},
     {"app_args": "--no-memory-pool", "app_name": "d8", "probability": 0.1},
     {"app_args": "--handle-weak-ref-weakly-in-minor-gc", "app_name": "d8", "probability": 0.1},
-    {"app_args": "--proto-assign-seq-opt", "app_name": "d8", "probability": 0.5}
+    {"app_args": "--proto-assign-seq-opt", "app_name": "d8", "probability": 0.5},
+    {"app_args": "--scavenger-chaos-mode", "app_name": "d8", "probability": 0.1}
 ]
